--- a/README
+++ b/README
@@ -4,6 +4,12 @@ NAME
 VERSION
     0.001
 
+CREATE SQL FILES FOR DATABASE SCHEMA
+    This command creates SQL files for our database schema in the sql/
+    directory:
+
+        PERL5LIB=lib/ bin/interchange6-create-database
+
 AUTHORS
     Stefan Hornburg (Racke), `racke@linuxia.de' Jeff Boes,
     `jeff@endpoint.com'
