--- a/README
+++ b/README
@@ -2,13 +2,107 @@ NAME
     Interchange6::Schema - Database Schema for Interchange 6
 
 VERSION
-    0.006
+    0.007
+
+DESCRIPTION
+    Database schema classes for Interchange6 Open Source eCommerce software.
 
 CREATE SQL FILES FOR DATABASE SCHEMA
     This command creates SQL files for our database schema in the sql/
     directory:
 
        interchange6-create-database
+
+SCHEMA CLASSES
+  Product
+    Interchange6::Schema::Result::Product
+
+  ProductAttribute
+    Interchange6::Schema::Result::ProductAttribute
+
+  ProductAttributes
+    Interchange6::Schema::Result::ProductAttributes
+
+  GroupPricing
+    Interchange6::Schema::Result::GroupPricing
+
+  Inventory
+    Interchange6::Schema::Result::Inventory
+
+  Review
+    Interchange6::Schema::Result::Review
+
+  MerchandisingAttribute
+    Interchange6::Schema::Result::MerchandisingAttribute
+
+  MerchandisingProduct
+    Interchange6::Schema::Result::MerchandisingProduct
+
+  Navigation
+    Interchange6::Schema::Result::Navigation
+
+  NavigationProduct
+    Interchange6::Schema::Result::NavigationProduct
+
+  Media
+    Interchange6::Schema::Result::Media
+
+  MediaDisplay
+    Interchange6::Schema::Result::MediaDisplay
+
+  MediaType
+    Interchange6::Schema::Result::MediaType
+
+  MediaProduct
+    Interchange6::Schema::Result::MediaProduct
+
+  User
+    Interchange6::Schema::Result::User
+
+  Role
+    Interchange6::Schema::Result::Role
+
+  UserRole
+    Interchange6::Schema::Result::UserRole
+
+  Permission
+    Interchange6::Schema::Result::Permission
+
+  UserAttribute
+    Interchange6::Schema::Result::UserAttribute
+
+  Address
+    Interchange6::Schema::Result::Address
+
+  Country
+    Interchange6::Schema::Result::Country
+
+  State
+    Interchange6::Schema::Result::State
+
+  Cart
+    Interchange6::Schema::Result::Cart
+
+  CartProduct
+    Interchange6::Schema::Result::CartProduct
+
+  Order
+    Interchange6::Schema::Result::Order
+
+  Orderline
+    Interchange6::Schema::Result::Orderline
+
+  OrderlinesShipping
+    Interchange6::Schema::Result::OrderlinesShipping
+
+  PaymentOrder
+    Interchange6::Schema::Result::PaymentOrder
+
+  Session
+    Interchange6::Schema::Result::Session
+
+  Setting
+    Interchange6::Schema::Result::Setting
 
 AUTHORS
     Stefan Hornburg (Racke), `racke@linuxia.de'
