Add POD pointer for Interchange6::Schema::Resultset::Session.

--- a/README
+++ b/README
@@ -116,6 +116,9 @@ SCHEMA CLASSES
   Setting
     Interchange6::Schema::Result::Setting
 
+  Session
+    Interchange6::Schema::ResultSet::Session
+
 AUTHORS
     Stefan Hornburg (Racke), `racke@linuxia.de'
 
