Add POD pointer for Interchange6::Schema::Resultset::UserAttributeValue.

--- a/README
+++ b/README
@@ -83,6 +83,9 @@ SCHEMA CLASSES
   UserAttribute
     Interchange6::Schema::Result::UserAttribute
 
+  UserAttributeValue
+    Interchange6::Schema::Result::UserAttributeValue
+
   Address
     Interchange6::Schema::Result::Address
 
