--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,16 @@
 Revision history for Interchange6::Schema
 
+0.031 Sat Apr  5 18:08:27 2014 CEST
+
+   [BUG FIXES]
+
+   * Use Test::DBIx::Class safely for RELEASE_TESTING only
+     (Peter Mottram, GH #63).
+
+   [TESTS]
+
+   * Silence media test (Stefan Hornburg (Racke)).
+
 0.030 Fri Apr  4 18:48:47 2014 CEST
 
    [ENHANCEMENTS]
