--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 Revision history for Interchange6::Schema
 
+0.052 Sun Oct  5 08:24:24 2014 EDT
+
+   [BUG FIXES]
+
+   * Fix relationship between Session and PaymentOrder result classes (Peter Mottram).
+
 0.051 Fri Aug 15 11:06:33 2014 CEST
 
    [BUG FIXES]
