--- a/lib/Interchange6/Schema/Manual/Classes.pod
+++ b/lib/Interchange6/Schema/Manual/Classes.pod
@@ -4,7 +4,7 @@ Interchange6::Schema::Manual::Classes - Result, ResultSet and Populate classes f
 
 =head1 DESCRIPTION
 
-The various L<Result Classes|DBIx::Class::Manual::Glossary/Result class> and ResultSet Classes that make up the Interchange6 Schema.
+The various L<result classes|DBIx::Class::Manual::Glossary/"Result class"> and resultset classes that make up the Interchange6 schema.
 
 =head1 RESULT CLASSES
 
