--- a/lib/Interchange6/Schema/Manual/DatabaseSupport.pod
+++ b/lib/Interchange6/Schema/Manual/DatabaseSupport.pod
@@ -4,6 +4,13 @@ Interchange6::Schema::Manual::DatabaseSupport - Details of database engine suppo
 
 =head1 MySQL
 
+MySQL databases should be created with UTF8 encoding and appropriate collation for your local, for example:
+
+    CREATE DATABASE "my_shop_db"
+        ENCODING 'UTF8'
+        LC_COLLATE = 'en_US.UTF-8'
+        LC_CTYPE = 'en_US.UTF-8';
+
 The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class specific connection attributes> are recommended as a minimum for MySQL:
 
     mysql_enable_utf8 => 1,
@@ -11,6 +18,10 @@ The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class spec
     quote_names       => 1,
 
 =head1 PostgreSQL
+
+PostgreSQL databases should be created with UT8 encoding, for example:
+
+    createdb -E UTF8 my_shop_db
 
 The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class specific connection attributes> are recommended as a minimum for PostgreSQL:
 
